@@ -233,6 +233,7 @@
 
 @slsh/lib/test/test_cmdopt.sl
 @slsh/lib/test/test_structfuns.sl
+@slsh/lib/test/test_readascii.sl
 
 @slsh/doc/tm/slsh.tm
 @slsh/doc/tm/Makefile
