@@ -5,6 +5,7 @@ autoload ("shift", "arrayfuns");
 autoload ("struct_filter", "structfuns");
 autoload ("struct_combine", "structfuns");
 autoload ("struct_field_exists", "structfuns");
+autoload ("readascii", "readascii");
 autoload ("glob", "glob");
 autoload ("sldb", "sldb");
 autoload ("print", "print");
